kubernetes/rag-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-service
  namespace: enterprise-ai-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-service
  template:
    metadata:
      labels:
        app: rag-service
    spec:
      containers:
        - name: rag-service
          image: darshankamate/enterprise-rag:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: rag-service
  namespace: enterprise-ai-platform
spec:
  ports:
    - port: 8001
  selector:
    app: rag-service
